--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -55,8 +55,8 @@
     justify-content: space-between;
     align-items: center;
     padding: $space-small;
-    background-color: transparent; // Match the card background
-    border-top: 1px solid rgba(255, 255, 255, 0.1); // Optional subtle separator for clarity
+    background-color: transparent;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 
     .button {
       margin-right: $space-small;
