--- a/src/styles/elements/dropdown.scss
+++ b/src/styles/elements/dropdown.scss
@@ -3,20 +3,20 @@
 .dropdown {
   display: flex;
   flex-direction: column;
-  gap: $gap-small;
+  gap: $space-small;
 
   &__label {
     font-size: $font-size-small;
-    color: $white-color;
+    color: $text-color-white;
   }
 
   &__select {
-    padding: $padding-small;
+    padding: $space-small;
     font-size: $font-size-base;
     border-radius: $border-radius;
-    border: 1px solid $border-color;
-    background-color: $background-dark;
-    color: $white-color;
+    border: 1px solid $color-border;
+    background-color: $background-dark-gray;
+    color: $text-color-white;
     appearance: none;
 
     &:focus {
@@ -25,7 +25,7 @@
     }
 
     &:hover {
-      border-color: $primary2-color;
+      border-color: $primary-faded-color;
     }
   }
 }
