--- a/src/styles/modals/modal.scss
+++ b/src/styles/modals/modal.scss
@@ -24,10 +24,10 @@
 
   &__content {
     position: relative;
-    background: $background-dark;
-    padding: $padding-large;
+    background: $background-dark-gray;
+    padding: $space-large;
     border-radius: $border-radius;
-    box-shadow: 0 4px 8px $shadow-color;
+    box-shadow: 0 4px 8px $color-shadow;
     max-width: 500px;
     width: 100%;
     z-index: 1010;
@@ -40,7 +40,7 @@
     right: 10px;
     background: none;
     border: none;
-    color: $white-color;
+    color: $text-color-white;
     font-size: 1.5rem;
     cursor: pointer;
     z-index: 1020;
