--- a/src/styles/pages/favorites-page.scss
+++ b/src/styles/pages/favorites-page.scss
@@ -3,7 +3,7 @@
 .favorites-page {
   h1 {
     font-size: $font-size-h1;
-    margin-bottom: $gap-large;
+    margin-bottom: $space-large;
     text-align: center;
     color: $primary-color;
   }
@@ -11,6 +11,6 @@
   .favorites-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: $gap-medium;
+    gap: $space-medium;
   }
 }
