--- a/src/styles/pages/page.scss
+++ b/src/styles/pages/page.scss
@@ -3,7 +3,7 @@
 .page {
   max-width: 1200px;
   margin: 0 auto;
-  padding: $padding-large;
+  padding: $space-large;
   box-sizing: border-box;
-  color: $white-color;
+  color: $text-color-white;
 }
