--- a/src/styles/pages/profile-page.scss
+++ b/src/styles/pages/profile-page.scss
@@ -3,22 +3,22 @@
 .profile-page {
   max-width: 600px;
   margin: 0 auto;
-  padding: $padding-standard;
+  padding: $space-medium;
   background-color: $background-black;
   border-radius: $border-radius;
-  color: $white-color;
+  color: $text-color-white;
 
   h1 {
     font-size: $font-size-h2;
     text-align: center;
-    margin-bottom: $margin-large;
+    margin-bottom: $space-large;
   }
 
   &__container {
     display: flex;
     flex-direction: column;
-    gap: $gap-large;
-    padding: $padding-large;
+    gap: $space-large;
+    padding: $space-large;
     background-color: $background-black;
     border-radius: $border-radius;
   }
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: $padding-small;
+    padding: $space-small;
 
     label {
       font-weight: bold;
@@ -37,11 +37,11 @@
 
     span, input {
       flex-basis: 70%;
-      padding: $padding-small;
-      border: 1px solid $border-color;
+      padding: $space-small;
+      border: 1px solid $color-border;
       border-radius: $border-radius;
       background-color: $background-graphite;
-      color: $white-color;
+      color: $text-color-white;
       font-size: $font-size-body;
     }
 
@@ -54,11 +54,11 @@
     display: flex;
     flex-direction: column; 
     width: 100%;       
-    gap: $gap-medium;
-    padding-top: $padding-small;
+    gap: $space-medium;
+    padding-top: $space-small;
 
     .btn {
-      padding: $padding-small $padding-standard;
+      padding: $space-small $space-medium;
       border-radius: $border-radius;
       font-size: $font-size-body;
       border: none;
@@ -66,12 +66,12 @@
 
       &.btn-primary {
         background-color: $primary-color;
-        color: $white-color;
+        color: $text-color-white;
       }
 
       &.btn-secondary {
         background-color: $background-graphite;
-        color: $white-color;
+        color: $text-color-white;
 
         &:hover {
           opacity: 0.9;
@@ -87,13 +87,13 @@
   .logout-button {
     display: flex;
     justify-content: flex-end;
-    margin-top: $margin-large;
-    padding-right: $padding-large;
+    margin-top: $space-large;
+    padding-right: $space-large;
 
     .btn {
-      padding: $padding-small $padding-standard;
+      padding: $space-small $space-medium;
       background-color: $background-graphite;
-      color: $white-color;
+      color: $text-color-white;
       border-radius: $border-radius;
       cursor: pointer;
       font-size: $font-size-body;
